--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ before_install:
 
 script:
   - docker run myman03/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "Docker-react-env"
+  bucket_name: "elasticbeanstalk-us-west-2.asfabsfdak"
+  bucket_path: "docker-react"
+  on:
+    branch: master
